# pelikan

./: CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.debian.segcache  NOTICE  README.md  docker-compose.yaml  momento_proxy.toml  otel-collector-config.yaml  prometheus.yaml
.github/: FUNDING.yml
src/common/: Cargo.toml
src/common/src/: expiry.rs  lib.rs  metrics.rs  ssl.rs  time.rs
src/config/: Cargo.toml
src/config/src/: buf.rs  debug.rs  human_size.rs  klog.rs  lib.rs  momento_proxy.rs  pingproxy.rs  pingserver.rs  proxy.rs  rds.rs  seg.rs  segcache.rs
src/core/admin/: Cargo.toml
src/core/admin/src/: lib.rs
src/core/proxy/: Cargo.toml
src/core/proxy/src/: backend.rs  frontend.rs  lib.rs  listener.rs  process.rs
src/core/server/: Cargo.toml
src/core/server/src/: lib.rs  listener.rs  process.rs
src/core/server/src/workers/: mod.rs  multi.rs  single.rs  storage.rs
src/entrystore/: Cargo.toml
src/entrystore/src/: lib.rs
src/entrystore/src/seg/: memcache.rs  mod.rs  resp.rs
src/entrystore/src/segcache/: memcache.rs  mod.rs  resp.rs
src/logger/: Cargo.toml
src/logger/src/: lib.rs
src/net/: Cargo.toml
src/net/src/: connector.rs  lib.rs  listener.rs  metrics.rs  stream.rs  tcp.rs  tls_tcp.rs  waker.rs
src/net/src/tls_tcp/: boringssl.rs  mod.rs  openssl.rs  rustls.rs  rustls_impl.rs
src/protocol/admin/: Cargo.toml
src/protocol/admin/benches/: admin.rs
src/protocol/admin/fuzz/fuzz_targets/: admin.rs
src/protocol/admin/src/: admin.rs  lib.rs  snapshots.rs
src/protocol/common/: Cargo.toml
src/protocol/common/benches/: benchmark.rs
src/protocol/common/src/: lib.rs  parsing.rs
src/protocol/memcache/: Cargo.toml
src/protocol/memcache/benches/: request_parsing.rs
src/protocol/memcache/fuzz/: Cargo.toml
src/protocol/memcache/fuzz/fuzz_targets/: memcache_binary.rs  memcache_text.rs
src/protocol/memcache/src/: lib.rs  metrics.rs  util.rs
src/protocol/memcache/src/binary/: mod.rs
src/protocol/memcache/src/request/: add.rs  append.rs  cas.rs  decr.rs  delete.rs  flush_all.rs  get.rs  incr.rs  mod.rs  prepend.rs  quit.rs  replace.rs  set.rs  version.rs
src/protocol/memcache/src/response/: client_error.rs  error.rs  mod.rs  server_error.rs  values.rs  version.rs
src/protocol/memcache/src/storage/: mod.rs
src/protocol/memcache/src/text/: mod.rs
src/protocol/ping/: Cargo.toml
src/protocol/ping/benches/: ping.rs
src/protocol/ping/fuzz/fuzz_targets/: ping.rs
src/protocol/ping/src/: lib.rs
src/protocol/ping/src/ping/: mod.rs
src/protocol/resp/: Cargo.toml
src/protocol/resp/fuzz/: Cargo.toml
src/protocol/resp/fuzz/dictionary/: resp.dict
src/protocol/resp/fuzz/fuzz_targets/: resp.rs
src/protocol/resp/src/: lib.rs  util.rs
src/protocol/resp/src/message/: array.rs  bulk_string.rs  error.rs  integer.rs  mod.rs  simple_string.rs
src/protocol/resp/src/parse/: command.rs  error.rs  mod.rs  parser.rs
src/protocol/resp/src/request/: badd.rs  del.rs  get.rs  hdel.rs  hexists.rs  hget.rs  hgetall.rs  hincrby.rs  hkeys.rs  hlen.rs  hmget.rs  hset.rs  hvals.rs  incr.rs  lindex.rs  llen.rs  lpop.rs  lpush.rs  lrange.rs  ltrim.rs  mod.rs  ping.rs  rpop.rs  rpush.rs  sadd.rs  sdiff.rs  set.rs  sinter.rs  sismember.rs  smembers.rs  srem.rs  sunion.rs  zadd.rs  zcard.rs  zcount.rs  zincrby.rs  zmscore.rs  zrange.rs  zrank.rs  zrem.rs  (+3 more)
src/protocol/resp/src/response/: mod.rs
src/protocol/resp/src/storage/: mod.rs
src/protocol/thrift/: Cargo.toml
src/protocol/thrift/fuzz/fuzz_targets/: parse.rs
src/protocol/thrift/src/: lib.rs
src/proxy/momento/: Cargo.toml  dump.rdb
src/proxy/momento/src/: admin.rs  error.rs  frontend.rs  klog.rs  listener.rs  main.rs
src/proxy/momento/src/metrics/: builder.rs  connection.rs  mod.rs  proxy.rs  request.rs  rpc.rs  util.rs
src/proxy/momento/src/protocol/: mod.rs
src/proxy/thrift/: Cargo.toml
src/proxy/thrift/src/: lib.rs  main.rs
src/queues/: Cargo.toml
src/queues/src/: lib.rs
src/server/pingserver/: Cargo.toml  build.rs
src/server/pingserver/proto/: pingpong.proto
src/server/pingserver/src/: config.rs  main.rs
src/server/pingserver/src/tokio/: admin.rs  ascii.rs  grpc.rs  http2.rs  http3.rs  metrics.rs  mod.rs
src/server/pingserver/tests/: integration.rs
src/server/rds/: Cargo.toml
src/server/rds/benches/: benchmark.rs
src/server/rds/src/: lib.rs  main.rs
src/server/rds/tests/: common.rs  integration.rs  integration_multi.rs
src/server/segcache/: Cargo.toml
src/server/segcache/benches/: benchmark.rs
src/server/segcache/src/: config.rs  lib.rs  main.rs
src/server/segcache/src/tokio/: ascii.rs  grpc.rs  http2.rs  http3.rs  metrics.rs  mod.rs
src/server/segcache/tests/: common.rs  integration.rs  integration_multi.rs
src/session/: Cargo.toml
src/session/src/: buffer.rs  client.rs  lib.rs  server.rs
src/storage/bloom/: Cargo.toml
src/storage/bloom/benches/: bloom.rs
src/storage/bloom/src/: lib.rs
src/storage/datatier/: Cargo.toml
src/storage/datatier/src/: direct_file.rs  file_backed_memory.rs  lib.rs  memory.rs  mmap_file.rs
src/storage/seg/: Cargo.toml
src/storage/seg/benches/: benchmark.rs
src/storage/seg/fuzz/: Cargo.toml
src/storage/seg/src/: builder.rs  lib.rs  metrics.rs  seg.rs
src/storage/seg/src/hashtable/: mod.rs
src/storage/seg/src/item/: header.rs
src/storage/seg/src/segments/: builder.rs  header.rs  segments.rs
src/storage/seg/src/ttl_buckets/: tests.rs  ttl_bucket.rs  ttl_buckets.rs
src/storage/seg/tests/: integration_basic.rs
src/storage/segcache/: Cargo.toml  README.md
src/storage/segcache/benches/: benchmark.rs
src/storage/segcache/fuzz/: Cargo.toml
src/storage/segcache/fuzz/fuzz_targets/: seg.rs  segcache.rs
src/storage/segcache/src/: builder.rs  error.rs  lib.rs  metrics.rs  rand.rs  seg.rs  segcache.rs  tests.rs  value.rs
src/storage/segcache/src/eviction/: mod.rs
src/storage/segcache/src/hashtable/: mod.rs
src/storage/segcache/tests/: integration_basic.rs
src/storage/types/: Cargo.toml
src/storage/types/benches/: benchmark.rs
src/storage/types/src/: lib.rs  parse.rs
(+129 files in other folders)
