[workspace.package]
version = "0.3.1"
edition = "2021"
homepage = "https://pelikan.io"
repository = "https://github.com/pelikan-io/pelikan"
license = "Apache-2.0"

[workspace]
resolver = "2"
members = [
    "src/common",
    "src/config",
    "src/core/admin",
    "src/core/proxy",
    "src/core/server",
    "src/entrystore",
    "src/logger",
    "src/macros",
    "src/net",
    "src/protocol/admin",
    "src/protocol/common",
    "src/protocol/http",
    "src/protocol/memcache",
    "src/protocol/ping",
    "src/protocol/resp",
    "src/protocol/thrift",
    "src/proxy/momento",
    "src/proxy/ping",
    "src/proxy/thrift",
    "src/server/pingserver",
    "src/server/rds",
    "src/server/segcache",
    "src/session",
    "src/storage/bloom",
    "src/storage/datatier",
    "src/storage/seg",
    "src/storage/types",
]

[workspace.dependencies]
ahash = "0.8.3"
arrayvec = "0.7.4"
awaken = "0.1.0"
backtrace = "0.3.69"
bitvec = "1.0.1"
blake3 = "1.5.0"
boring = "3.1.0"
boring-sys = "3.1.0"
bstr = "1.7.0"
bytes = "1.5.0"
clap = "4.4.6"
clocksource = "0.6.0"
crossbeam-channel = "0.5.8"
foreign-types-shared = "0.3.1"
httparse = "1.8.0"
libc = "0.2.149"
log = "0.4.20"
memmap2 = "0.9.0"
metriken = "0.3.1"
metrohash = "1.0.6"
mio = "0.8.8"
nom = "7.1.3"
parking_lot = "0.12.1"
phf = "0.11.2"
proc-macro2 = "1.0.69"
quote = "1.0.33"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_xoshiro = "0.6.0"
ringlog = "0.3.0"
serde = "1.0.189"
serde_json = "1.0.107"
signal-hook = "0.3.17"
slab = "0.4.9"
switchboard = "0.2.1"
syn = "2.0.38"
thiserror = "1.0.49"
tiny_http = "0.12.0"
toml = "0.8.2"
twox-hash = { version = "1.6.3", default-features = false }
urlencoding = "2.1.3"
zookeeper = "0.8.0"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.dev]
debug = true
opt-level = 0
