[package]
name = "common"
description = "common types, traits, and helper functions for Pelikan servers"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
boring = { workspace = true }
clocksource = { workspace = true }
metriken = { workspace = true }
pelikan-net = { workspace = true, features = ["boringssl"] }
ringlog = { workspace = true }
serde = { workspace = true, features = ["derive"] }
