[package]
name = "config"
description = "component configurations for Pelikan"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
common = { path = "../common", default-features = false }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

[features]
default = ["boringssl"]
boringssl = ["common/boringssl"]