[package]
name = "entrystore"
description = "a collection of entry storage types for use in Pelikan servers"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
debug = ["seg/debug"]

[dependencies]
common = { path = "../common" }
config = { path = "../config" }
protocol-common = { path = "../protocol/common" }
protocol-memcache = { path = "../protocol/memcache" }
protocol-ping = { path = "../protocol/ping" }
protocol-resp = { path = "../protocol/resp" }
seg = { path = "../storage/seg" }
storage-types = { path = "../storage/types" }
