[package]
name = "logger"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
common = { path = "../common", default-features = false }
config = { path = "../config", default-features = false }
ringlog = { workspace = true }
