[package]
name = "logger"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
config = { path = "../config", default-features = false }
log = { workspace = true }
logroller = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
