[package]
name = "pelikan-net"
description = "Pelikan project's networking abstractions for non-blocking event loops"
authors = ["Brian Martin <brian@pelikan.io>"]
version = "0.3.0"

edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
boring = { workspace = true, optional = true }
boring-sys = { workspace = true, optional = true }
foreign-types-shared_03 = { package = "foreign-types-shared", version = "0.3.1" }
foreign-types-shared_01 = { package = "foreign-types-shared", version = "0.1.1" }
libc = { workspace = true }
metriken = { workspace = true }
mio = { workspace = true, features = ["os-poll", "net"] }
openssl = { workspace = true, optional = true }
openssl-sys = { workspace = true, optional = true }

[features]
default = ["boringssl"]
boringssl = ["boring", "boring-sys"]
openssl = ["dep:openssl", "openssl-sys", "openssl/vendored"]
