[package]
name = "pelikan-net"
description = "Pelikan project's networking abstractions for non-blocking event loops"
authors = ["Brian Martin <brian@pelikan.io>"]
version = "0.4.1"

edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
libc = { workspace = true }
metriken = { workspace = true, optional = true }
mio = { workspace = true, features = ["os-poll", "net"] }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }

[features]
metrics = ["metriken"]
