[package]
name = "queues"
description = "queue types for inter-process communication"
authors = ["Brian Martin <bmartin@twitter.com>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
awaken = { workspace = true }
crossbeam-queue = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
net = { path = "../net" }
