[package]
name = "session"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
bytes = { workspace = true }
common = { path = "../common" }
log = { workspace = true }
metriken = { workspace = true }
net = { path = "../net" }
protocol-common = { path = "../protocol/common" }
