[package]
name = "session"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
bytes = { workspace = true }
clocksource = { workspace = true }
common = { path = "../common", default-features = false }
log = { workspace = true }
metriken = { workspace = true }
pelikan-net = { workspace = true }
protocol-common = { path = "../protocol/common", default-features = false }
