[package]
name = "admin"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
common = { path = "../../common" }
config = { path = "../../config" }
crossbeam-channel = { workspace = true }
entrystore = { path = "../../entrystore" }
libc = { workspace = true }
logger = { path = "../../logger" }
metriken = { workspace = true }
pelikan-net = { workspace = true }
parking_lot = { workspace = true }
protocol-admin = { path = "../../protocol/admin" }
protocol-common = { path = "../../protocol/common" }
session = { path = "../../session" }
slab = { workspace = true }
switchboard = { workspace = true }
tiny_http = { workspace = true }
