[package]
name = "proxy"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
admin = { path = "../admin" }
common = { path = "../../common" }
clocksource = { workspace = true }
config = { path = "../../config" }
crossbeam-channel = { workspace = true }
entrystore = { path = "../../entrystore" }
logger = { path = "../../logger" }
metriken = { workspace = true }
pelikan-net = { workspace = true, features = ["metrics"] }
protocol-admin = { path = "../../protocol/admin" }
protocol-common = { path = "../../protocol/common" }
session = { path = "../../session" }
slab = { workspace = true }
switchboard = { workspace = true }

[features]
rustls = ["pelikan-net/rustls"]
boringssl = ["pelikan-net/boringssl"]
openssl = ["pelikan-net/openssl"]
