[package]
name = "server"
description = "core server event loops and threads for Pelikan servers"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
admin = { path = "../admin" }
common = { path = "../../common" }
config = { path = "../../config" }
crossbeam-channel = { workspace = true }
entrystore = { path = "../../entrystore" }
logger = { path = "../../logger" }
metriken = { workspace = true }
net = { path = "../../net" }
protocol-admin = { path = "../../protocol/admin" }
protocol-common = { path = "../../protocol/common" }
session = { path = "../../session" }
slab = { workspace = true }
switchboard = { workspace = true }
ctrlc = {workspace = true}
