[package]
name = "server"
description = "core server event loops and threads for Pelikan servers"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
admin = { path = "../admin" }
common = { path = "../../common" }
config = { path = "../../config" }
crossbeam-channel = { workspace = true }
entrystore = { path = "../../entrystore" }
libc = {workspace = true}
logger = { path = "../../logger" }
metriken = { workspace = true }
pelikan-net = { path = "../../net" }
protocol-admin = { path = "../../protocol/admin" }
protocol-common = { path = "../../protocol/common" }
session = { path = "../../session" }
signal-hook = {workspace = true}
slab = { workspace = true }
switchboard = { workspace = true }
