[package]
name = "protocol-admin"
description = "Admin ASCII protocol used in Pelikan servers"
authors = ["Brian Martin <bmartin@twitter.com>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
common = { path = "../../common" }
config = { path = "../../config" }
logger = { path = "../../logger" }
metriken = { workspace = true }
protocol-common = { path = "../../protocol/common" }
storage-types = { path = "../../storage/types" }

[dev-dependencies]
criterion = "0.3.4"
