[package]
name = "protocol-common"
description = "Traits and shared code for Pelikan protocols"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bench]]
name = "parsing"
path = "benches/benchmark.rs"
harness = false

[dependencies]
bytes = { workspace = true }
common = { path = "../../common" }
config = { path = "../../config" }
logger = { path = "../../logger" }
storage-types = { path = "../../storage/types" }

[dev-dependencies]
criterion = "0.3.4"
