[package]
name = "protocol-common"
description = "Traits and shared code for Pelikan protocols"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
bytes = { workspace = true }
common = { path = "../../common", default-features = false }
config = { path = "../../config", default-features = false }
logger = { path = "../../logger" }
storage-types = { path = "../../storage/types" }

[dev-dependencies]
criterion = "0.5.1"
