[package]
name = "protocol-memcache"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bench]]
name = "request-parsing"
path = "benches/request_parsing.rs"
harness = false

[dependencies]
common = { path = "../../common", default-features = false }
clocksource = { workspace = true }
logger = { path = "../../logger" }
metriken = { workspace = true }
nom = { workspace = true }
protocol-common = { path = "../../protocol/common" }

[dev-dependencies]
criterion = "0.5.1"

[features]
metrics = []