[package]
name = "protocol-ping"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bench]]
name = "ping"
path = "benches/ping.rs"
harness = false

[dependencies]
common = { path = "../../common", default-features = false }
config = { path = "../../config", default-features = false }
logger = { path = "../../logger", default-features = false }
metriken = { workspace = true }
protocol-common = { path = "../../protocol/common" }
storage-types = { path = "../../storage/types" }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = []
client = ["stats"]
server = ["stats"]
stats = []
