[package]
name = "protocol-resp"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
common = { path = "../../common" }
logger = { path = "../../logger" }
metriken = { workspace = true }
nom = { workspace = true }
protocol-common = { path = "../../protocol/common" }
thiserror = { workspace = true }
bstr = { workspace = true }
memchr = "2.5.0"
