[package]
name = "protocol-thrift"
authors = ["Brian Martin <bmartin@twitter.com>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
common = { path = "../../common" }
logger = { path = "../../logger" }
metriken = { workspace = true }
protocol-common = { path = "../../protocol/common" }
