[package]
name = "momento_proxy"
description = "a proxy to access Momento cache(s) over memcache protocol"
authors = ["Brian Martin <brayniac@gmail.com>"]

version = "0.3.2"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
backtrace = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
clocksource = { workspace = true }
common = { path = "../../common" }
config = { path = "../../config" }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
logger = { path = "../../logger" }
metriken = { workspace = true }
momento = "0.50.4"
pelikan-net = { workspace = true, features = ["metrics"] }
protocol-admin = { path = "../../protocol/admin" }
protocol-memcache = { path = "../../protocol/memcache" }
protocol-resp = { path = "../../protocol/resp" }
session = { path = "../../session" }
storage-types = { path = "../../storage/types" }
tokio = { version = "1.43.1", features = ["full"] }
thiserror = { workspace = true }
goodmetrics = "7.1.1"
