[package]
name = "pelikan-pingserver"
description = "a ping/pong server with multiple protocol support"
authors = ["Brian Martin <brian@pelikan.io>"]
build = "build.rs"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bin]]
name = "pelikan_pingserver"
path = "src/main.rs"
doc = false

[dependencies]
backtrace = { workspace = true }
bytes = { workspace = true }
chrono = "0.4.38"
clap = { workspace = true }
common = { path = "../../common" }
config = { path = "../../config" }
entrystore = { path = "../../entrystore" }
humantime = "2.1.0"
h2 = "0.4.6"
h3 = "0.0.6"
h3-quinn = "0.0.7"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["http1", "http2", "server"] }
logger = { path = "../../logger" }
metriken = { workspace = true }
pin-project = "1.1.5"
prost = "0.13.2"
protocol-ping = { path = "../../protocol/ping", features = ["server"] }
quinn = "0.11.5"
rustls = { version = "0.23.13", default-features = false, features = [
    "logging",
    "ring",
    "std",
] }
rustls-native-certs = "0.8.0"
serde = { workspace = true, features = ["derive"] }
server = { path = "../../core/server" }
session = { path = "../../session" }
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"] }
toml = { workspace = true }
tonic = { version = "0.12.3" }
warp = "0.3.7"

[build-dependencies]
tonic-build = "0.12.2"
