[package]
name = "pelikan-pingserver"
description = "a ping/pong server with multiple protocol support"
authors = ["Brian Martin <brian@pelikan.io>"]
build = "build.rs"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bin]]
name = "pelikan_pingserver"
path = "src/main.rs"
doc = false

[dependencies]
backtrace = { workspace = true }
bytes = { workspace = true }
chrono = "0.4.44"
clap = { workspace = true }
common = { path = "../../common" }
config = { path = "../../config" }
entrystore = { path = "../../entrystore" }
humantime = "2.3.0"
h2 = "0.4.13"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "http2", "server"] }
logger = { path = "../../logger" }
metriken = { workspace = true }
pin-project = "1.1.11"
prost = "0.14.3"
protocol-ping = { path = "../../protocol/ping", features = ["server"] }
quinn = "0.11.9"
rustls = { version = "0.23.37", default-features = false, features = [
    "logging",
    "ring",
    "std",
] }
rustls-native-certs = "0.8.3"
serde = { workspace = true, features = ["derive"] }
server = { path = "../../core/server" }
session = { path = "../../session" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
toml = { workspace = true }
tonic = { version = "0.14.5" }
tonic-prost = "0.14.5"
warp = { version = "0.4.2", features = ["server"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
