[package]
name = "pelikan-pingserver"
description = "a ping/pong server for testing and benchmarking"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bin]]
name = "pelikan-pingserver"
path = "src/main.rs"
doc = false

[dependencies]
backtrace = { workspace = true }
clap = { workspace = true }
common = { path = "../../common" }
config = { path = "../../config" }
entrystore = { path = "../../entrystore" }
logger = { path = "../../logger" }
metriken = { workspace = true }
protocol-ping = { path = "../../protocol/ping", features = ["server"] }
server = { path = "../../core/server" }
