[package]
name = "pelikan-segcache"
description = "a Memcache protocol server with segment-structured storage"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bin]]
name = "pelikan_segcache_rs"
path = "src/main.rs"
doc = false

[features]
debug = ["entrystore/debug"]

[dependencies]
backtrace = { workspace = true }
clap = { workspace = true }
common = { path = "../../common" }
config = { path = "../../config" }
entrystore = { path = "../../entrystore" }
humantime = "2.1.0"
logger = { path = "../../logger" }
metriken = { workspace = true }
parking_lot = "0.12.3"
protocol-common = { path = "../../protocol/common" }
protocol-memcache = { path = "../../protocol/memcache" }
serde = { workspace = true, features = ["derive"] }
server = { path = "../../core/server", features = ["boringssl"] }
session = { path = "../../session" }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
warp = "0.3.7"

[dev-dependencies]
criterion = "0.5.1"
