[package]
name = "bloom"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
default = ["rand"]

[dependencies]
bitvec = { workspace = true }
metrohash = { workspace = true }
twox-hash = { workspace = true, default-features = false }
rand = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bloom"
harness = false
