[package]
name = "datatier"
version = "0.1.0"
description = "abstractions for byte storage pools"
authors = ["Brian Martin <brian@pelikan.io>"]

edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
blake3 = { workspace = true }
clocksource = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = "3.3.0"
