[package]
name = "seg"
description = "segment-structured in-memory storage with eager expiration"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[features]

# enables setting/checking magic strings
magic = []

# metafeatures
debug = ["magic"]

# default set of enabled features
default = []

[dependencies]
ahash = { workspace = true }
clocksource = { workspace = true }
datatier = { path = "../datatier" }
metriken = { workspace = true }
rand = { workspace = true , features = ["small_rng", "getrandom"] }
rand_chacha = { workspace = true }
rand_xoshiro = { workspace = true }
ringlog = { workspace = true }
storage-types = { path = "../types" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.3.4"
