[package]
name = "storage-types"
authors = ["Brian Martin <brian@pelikan.io>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
[[bench]]
name = "parsing"
path = "benches/benchmark.rs"
harness = false
[dependencies]


[dev-dependencies]
criterion = "0.3.4"
rand_xoshiro = { workspace = true }
rand = { workspace = true , features = ["small_rng", "getrandom"] }
